# timbot

./: .env.example  .gitignore  README.md  pyproject.toml
src/timbot/: analysis.py  cleaning.py  cli.py  dataset.py  discord_bot.py  discord_export.py  env.py  io_utils.py  local_mlx_client.py  memory_builder.py  memory_retriever.py  streamlit_app.py
tests/: test_cleaning.py  test_dataset.py  test_discord_bot.py  test_memory_builder.py  test_memory_retriever.py
tests/fixtures/discord/: messages.json
